add pom.xml to each sub modules of aribaweb, and output all generated files to build dir
antigravity